# webgpu_learning

./: .gitignore  CMakeLists.txt  build.sh  buildDebug.sh  buildRelease.sh  buildRun.sh
lib/imgui/: CMakeLists.txt
resources/: pyramid.txt  shader.wgsl
src/: Application.cpp  Application.hpp  ResourceManager.cpp  ResourceManager.hpp  Scene.cpp  Scene.hpp  application.cpp  application.hpp  main.cpp
src/attributes/: Mesh.cpp  Mesh.hpp
